# jago

./: .dockerignore  .gitignore  Cargo.toml  README.md  action  before  contribute  future  goal  governance  hello  how  ignore  instrument.vim  jago  jago.studio  jago.toml  jago.vim  life  local  map  mobile.toml  next  poems  process  self  start  start.md  steps  todo  variables  vim  want
agreements/: project.md
bounty/: park.io  random.org
cafe/: company
community/: irregularites  postmortem  sewage  unemployables
company/: company
consider/: ambiguity
container/: build  compose.yml  serve.Dockerfile
container/builder/: Dockerfile  build.Dockerfile
container/git-http/: Dockerfile  before  conf  git.conf  start
container/git-nginx/: Dockerfile  git.conf  start
container/git-ssh/: Dockerfile  before  cat_keys  server_configuration  start
container/remote/: Dockerfile  authenticate  configuration  start
container/repository/: Dockerfile  conf  create
container/serve/: Dockerfile
container/shell/: Dockerfile  before  cat_keys  server_configuration  start
container/shell1/: Dockerfile  setup
container/shell2/: Dockerfile  configuration  start
crates/ansi/: Cargo.toml
crates/ansi/src/: lib.rs
crates/author/: Cargo.toml
crates/author/src/: essay.rs  lib.rs  program.rs
crates/browser/: Cargo.toml  browser.html
crates/browser/src/: lib.rs
crates/context/: Cargo.toml  README.md  format
crates/context/src/: buffer.rs  context.rs  document.rs  lib.rs  pipe.rs
crates/context/src/document/: grid.rs
crates/context/src/parse/: error.rs  mod.rs
crates/cursor/: Cargo.toml
crates/display/: Cargo.toml
crates/display/src/: buffer.rs  cursor.rs  cursor1.rs  display.rs  document.rs  lib.rs  unicode.rs
crates/edit/: Cargo.toml
crates/editor/: Cargo.toml
crates/editor/src/: context.rs  dependency.rs  lib.rs
crates/environment/: Cargo.toml
crates/handle/: Cargo.toml
crates/handle/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs  pack.rs
crates/instrument/: Cargo.toml
crates/instrument/src/: lib.rs
crates/interface/: Cargo.toml
crates/interface/src/: all.rs  insert.rs  lib.rs  model.rs  normal.rs
crates/logs/: Cargo.toml
crates/logs/src/: lib.rs
crates/read/: Cargo.toml
crates/wasm/: Cargo.toml  manifest.json
crates/web/: Cargo.toml  web.html
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
editor/: init.vim  nvim  plugins.vim  vim  writing.vim
evidence/: musicly
experiment/mob/: Cargo.toml  mobile.toml
experiment/window/: Cargo.toml
inspiration/: Cargo.toml
instrument/: handle.vim  instrument.vim
instrument/container/: build  clean  start
jago/: cafe  jago  jago.css  outline  reason  start.md  story  studio  tutorial
jago/origin/: business
jago/tangent/: sorry-dreaded-woman
kind/: a-boxing-company  alec-thompson  audio  commit  conceptology  cuddling-with-the-patriarchy  dead-ends  ethically-conspicuous  grocery-shopping-for-the-apocalypse  haole-soup  head-chef  jesus-is-gay  kind  negotiations-with-my-roommates-cat  nickel  oh-thank-god  pablo-porta  surprisingly-lucid-dreaming  surprisingly-lucid-dreams  the-aliens-are-coming  the-multiverse-is-humorous  wish  with-respect-to-the-cat
last/: cargo.rs  colors.rs  directory.rs  logs.rs  sequence.rs  serialize.rs  terminal.rs
last/context/: buffer.rs
last/directives/: shell.rs
last/last/: document.rs  grid1.rs
offers/: opinion
other/: Cargo.toml
other/src/: file_system.rs
poems/chris-abani/: the-new-religion
school/: start
shelf/book/: Cargo.toml  book
shelf/book/src/: lib.rs
shelf/candle/: Cargo.toml
shelf/encyclopedia/: Cargo.toml
shelf/encyclopedia/src/: index.rs  lib.rs
shelf/glass/: Cargo.toml
shelf/glass/src/: lib.rs  video.rs
shelf/glass/src/life/: mod.rs
shelf/logger/: Cargo.toml
shelf/magazine/: Cargo.toml
shelf/magazine/src/: lib.rs
shelf/painting/: Cargo.toml
shelf/pipe/: Cargo.toml
shelf/pipe/src/: lib.rs  sink.rs
shelf/plant/: Cargo.toml  water
shelf/program/: Cargo.toml
shelf/program/src/: lib.rs
shelf/puzzle/: Cargo.toml
shelf/puzzle/src/: lib.rs  puzzle.rs
shelf/scratch/: Cargo.toml
shelf/scratch/src/: lib.rs  scrape.rs  web.rs
shelf/shadow/: Cargo.toml
shelf/shadow/src/: html.rs  lib.rs  web.rs
shelf/utility/: Cargo.toml
shelf/vim/: Cargo.toml  handle.vim  start.md
shelf/watch/: Cargo.toml
shelf/watch/src/: device.rs  draw.rs  font.rs  frame.rs  layer.rs  lib.rs  life.rs  pipelines.rs  shade.rs
shelf/watch/src/shaders/: challenge.wgsl  shader.wgsl
shelf/web/: Cargo.toml  bundle  extend  handle  sign  start
shelf/web/src/: background.js  background.rs  content.js  context.rs  frame.rs  lib.html  lib.js  lib.json  lib.rs  popup.js  shadow.rs  tree.rs  web.rs
shelf/web/src/content/: infect.js
shelf/web/src/handle/: mod.rs
shelf/web/src/life/: context.rs  draw.rs  mod.html  mod.js  mod.rs
source/: man_without_a_country.rs  podcasts.rs
src/: action.rs  address.rs  ansi.rs  browse.rs  buffer.rs  cache.rs  cargo.rs  color.rs  colors.rs  context.rs  cursor.rs  directory.rs  display.rs  document.rs  environment.rs  event.rs  filter.rs  gpu.rs  grid.rs  handle.rs  image.rs  input.rs  interface.rs  iter_view.rs  lense.rs  lib.rs  logger.rs  logs.rs  main.rs  mat.rs  order.rs  pack.rs  pane.rs  parse.rs  parts.rs  pipe.rs  plane.rs  reason.rs  request.rs  resource.rs  (+16 more)
src/action/: output.rs  serve.rs  write.rs
src/cache/: repository.rs
src/context/: context.rs  mod.rs
src/directives/: buffer.rs  mod.rs  shell.rs  traits.rs
src/document/: parse.rs  syntax.rs  write.rs
src/event/: gpu.rs
src/interface/: format.rs  identity.rs  serve.rs  translate.rs  write.rs
src/source/: document.rs
stack/: deployment.yml  service.yml
stack/studio/: certificate.yml  ingress.yml
story/: anarchy  duality  finding-equillibrium  hello-world  holy-shit  home-schoolers-advice  man-without-a-company  message  othered-in-a-museum  step-one  story  swimming  the-island  word-weight
story/platform/: platform
table/: paper
(+48 files in other folders)
