[package]
name = "jago"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serve = ["http"]

[dependencies]
log = "0.4.14"
simplelog = "0.11.2"
context = { path = "crates/context" }
http = { path = "crates/http", optional = true }
thiserror = "1.0.30"
dirs = "4.0.0"
logs = { path = "crates/logs" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
browser = { path = "crates/browser" }
wasm-bindgen = "0.2.79"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ansi = { path = "crates/ansi" }
environment = { path = "crates/environment" }

[workspace]
members = ["crates/*"]
