[package]
name = "author"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.3.3"
proc-macro2 = "1.0.30"
proc-macro2-diagnostics = "0.9.1"
quote = "1.0.10"
serde = { version = "1.0.130", features = ["derive"] }
syn = "1.0.80"
thiserror = "1.0.30"
toml = "0.5.8"
workspace = { path = "../workspace" }
