[package]
name = "browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
context = { path = "../context" }
logs = { path = "../logs" }
dioxus = { version = "0.2.1", features = ["web"] }
log = "0.4.14"
thiserror = "1.0.30"
winit = "0.26.1"
wasm-bindgen = "0.2.79"

[dependencies.web-sys]
version = "0.3.56"
features = ["Window", "Location", "HtmlCanvasElement"]
