[package]
name = "browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context = { path = "../context" }
instrument = { path = "../instrument" }
dioxus = { version = "0.2.1", features = ["web"] }
thiserror = "1.0.30"

[dependencies.web-sys]
version = "0.3.56"
features = ["Window", "Location"]
