[package]
name = "context"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
crossterm = "0.22.1"
futures = "0.3.18"
log = "0.4.14"
nom = "7.1.0"
once_cell = "1.8.0"
sprs = "0.11.0"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["rt", "sync"] }
tokio-stream = "0.1.8"
unicode-segmentation = "1.8.0"
