[package]
name = "context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instrument = { path = "../instrument" }
environment = { path = "../environment" }
thiserror = "1.0.30"
crdts = "7.0.0"
bitflags = "1.3.2"
itertools = "0.10.3"
serde = "1.0.136"
unicode-segmentation = "1.9.0"
