[package]
name = "display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context = { path = "../context" }
crossterm = "0.22.1"
dense = { path = "../dense" }
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
