[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
environment = { path = "../environment" }
instrument = { path = "../instrument" }
git2 = "0.14.2"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.8"
