[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
crdts = "7.0.0"
crossterm = "0.23.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
