[package]
name = "handle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
context = { path = "../context" }
log = "0.4.14"
rosc = "0.6.0"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
