[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
environment = { path = "../environment" }
instrument = { path = "../instrument" }
thiserror = "1.0.30"
wasm-pack = "0.10.2"
context = { path = "../context" }
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread"] }
hyper = "0.14.17"
axum = "0.4.8"
tower-http = { version = "0.2.5", features = ["fs", "trace"] }
notify = "4.0.17"
