[package]
name = "instrument"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4.14"
console_log = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
environment = { path = "../environment" }
tracing-subscriber = "0.3.9"
tracing = "0.1.32"
