[package]
name = "interface"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context = { path = "../context" }
log = "0.4.14"
nannou = "0.18.0"
thiserror = "1.0.30"
workspace = { path = "../workspace" }
