[package]
name = "workspace"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
thiserror = "1.0.30"
context = { path = "../context" } 
log = "0.4.14"
ignore = "0.4.18"
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3.18"
crossterm = "0.22.1"
