[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
environment = { path = "../environment" }
glob = "0.3.0"
ignore = "0.4.18"
proc-macro2 = "1.0.36"
proc-macro2-diagnostics = "0.9.1"
quote = "1.0.15"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
