[package]
name = "book"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
proc-macro2-diagnostics = "0.9.1"
syn = { version = "1.0.73", features = ["full"] }
proc-macro2 = { version = "1.0.27", features = ["span-locations"] }
utility = { path = "../utility" }
dirs = "3.0.2"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
