[package]
name = "encyclopedia"
version = "0.1.0"
authors = ["Isaac Snow <isaacjsnow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
book = { path = "../book" }
tantivy = { version = "0.16.1" }
tempfile = { version = "3.2.0", optional = true }
puzzle = { path = "../puzzle" }
serde = "1.0.130"
painting = { path = "../painting" }
parking_lot = "0.11.2"
once_cell = "1.8.0"
thiserror = "1.0.29"
