[package]
name = "glass"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context = { path = "../../crates/context" }
iced = { git = "https://github.com/iced-rs/iced", features = ["canvas", "tokio", "debug"] }
itertools = "0.10.1"
rustc-hash = "1.1.0"
thiserror = "1.0.30"
tokio = "1.14.0"
url = "2.2.2"
