[package]
name = "magazine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
glob = "0.3.0"
ignore = "0.4.18"
book = { path = "../book" }
