[package]
name = "pipe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
book = { path = "../book" }
byteorder = "1.4.3"
crdts = "7.0.0"
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.68"
#puzzle = { path = "../puzzle" }
#encyclopedia = { path = "../encyclopedia" }
