[package]
name = "program"
version = "0.1.0"
authors = ["Isaac Snow <isaacjsnow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
proc-macro2-diagnostics = "0.9.1"
syn = { version = "1.0.73", features = ["full"] }
matches = "0.1.8"
utility = { path = "../utility" }
bitflags = "1.2.1"
