[package]
name = "puzzle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crdts = "7.0.0"
log = "0.4.14"
painting = { path = "../painting" }
serde = "1.0.130"
tantivy = "0.16.1"
thiserror = "1.0.29"
wasm-bindgen = { version = "0.2.78", optional = true }
