[package]
name = "scratch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
search=["tantivy"]
scrape=["scraper"]

[dependencies]
bincode = "1.3.3"
crdts = "7.0.0"
painting = { path = "../painting" }
reqwest = "0.11.5"
scraper = { version = "0.12.0", optional = true }
serde = { version = "1.0.130", features = ["derive"] }
tantivy = { version = "0.16.1", optional = true }
thiserror = "1.0.29"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
