[package]
name = "shadow"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
web = ["web-sys", "wasm-bindgen", "js-sys", "serde_json"]

[dependencies]
crdts = "7.0.0"
thiserror = "1.0.29"
wasm-bindgen = { version = "0.2.78", optional = true, features = ["serde-serialize"] }
scratch = { path = "../scratch" }
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.14"
js-sys = { version = "0.3.55", optional = true }
serde_json = { version = "1.0.68", optional = true }

[dependencies.web-sys]
version = "0.3.51"
optional = true
features = [
  'Document',
  'Location',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'NodeList',
  'HtmlHeadElement'
]
