[package]
name = "watch"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context = { path = "../../crates/context" }
fixedbitset = "0.4.0"
font-kit = "0.10.1"
futures = "0.3.18"
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
wgpu = "0.11.0"
wgpu_glyph = "0.15.1"
winit = "0.25.0"
