[package]
name = "web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
content = []
popup = []
background = []

[dependencies]
console_log = "0.2.0"
log = "0.4.14"
rand = "0.8.4"
rand_core = "0.6.3"
seed = "0.8.0"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.29"
wasm-bindgen = "0.2.78"
book = { path = "../book" }
encyclopedia = { path = "../encyclopedia", features = ["web-sys"] }
js-sys = "0.3.55"
fixedbitset = "0.4.0"
crdts = "7.0.0"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'DomRect',
  'NodeList',
  'HtmlHeadElement'
]
